// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should Map city component render correctly 1`] = `
<section
  className="map cities__map"
  id="map"
/>
`;

exports[`Should Map property component render correctly 1`] = `
<section
  className="map property__map"
  id="map"
/>
`;
